implement view order

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,10 +17,7 @@
             android:id="@+id/nav_menu"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_menu" />
-<!--        <item-->
-<!--            android:id="@+id/nav_food_list"-->
-<!--            android:icon="@drawable/ic_baseline_food_bank_24"-->
-<!--            android:title="@string/menu_food_list" />-->
+
     </group>
 
     <group
@@ -33,9 +30,9 @@
     </group>
 
     <group
-        android:id="@+id/menu_order">
+        android:id="@+id/order">
         <item
-            android:id="@+id/nav_order"
+            android:id="@+id/view_order"
             android:icon="@drawable/ic_baseline_file_copy_24"
             android:title="@string/menu_order" />
 
