--- a/app/src/main/res/layout/layout_map.xml
+++ b/app/src/main/res/layout/layout_map.xml
@@ -10,4 +10,8 @@
         android:id="@+id/map_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <TextView
+        android:id="@+id/tx"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content" />
 </LinearLayout>
